library/src/libqevent.h

typedef struct QEventPoint QEventPoint;
typedef struct QInputDevice QInputDevice;
typedef struct QInputEvent QInputEvent;
typedef struct QKeyCombination QKeyCombination;
typedef struct QKeyEvent QKeyEvent;
typedef struct QNativeGestureEvent QNativeGestureEvent;
typedef struct QObject QObject;
typedef struct QPoint QPoint;
typedef struct QPointF QPointF;
typedef struct QPointerEvent QPointerEvent;
typedef struct QPointingDevice QPointingDevice;
typedef struct QSinglePointEvent QSinglePointEvent;
QTLIBC_API QInputDevice* QInputEvent_Device(const QInputEvent* self);
QTLIBC_API int QInputEvent_DeviceType(const QInputEvent* self);
QTLIBC_API int QInputEvent_Modifiers(const QInputEvent* self);
QTLIBC_API void QInputEvent_SetModifiers(QInputEvent* self, int modifiers);
QTLIBC_API unsigned long long QInputEvent_Timestamp(const QInputEvent* self);
QTLIBC_API void QInputEvent_SetTimestamp(QInputEvent* self, unsigned long long timestamp);
QTLIBC_API QPointingDevice* QPointerEvent_PointingDevice(const QPointerEvent* self);
QTLIBC_API int QPointerEvent_PointerType(const QPointerEvent* self);
QTLIBC_API void QPointerEvent_SetTimestamp(QPointerEvent* self, unsigned long long timestamp);
QTLIBC_API ptrdiff_t QPointerEvent_PointCount(const QPointerEvent* self);
QTLIBC_API QEventPoint* QPointerEvent_Point(QPointerEvent* self, ptrdiff_t i);
QTLIBC_API libqt_list /* of QEventPoint* */ QPointerEvent_Points(const QPointerEvent* self);
QTLIBC_API QEventPoint* QPointerEvent_PointById(QPointerEvent* self, int id);
QTLIBC_API bool QPointerEvent_AllPointsGrabbed(const QPointerEvent* self);
QTLIBC_API bool QPointerEvent_AllPointsAccepted(const QPointerEvent* self);
QTLIBC_API void QPointerEvent_SetAccepted(QPointerEvent* self, bool accepted);
QTLIBC_API QObject* QPointerEvent_ExclusiveGrabber(const QPointerEvent* self, QEventPoint* point);
QTLIBC_API void QPointerEvent_SetExclusiveGrabber(QPointerEvent* self, QEventPoint* point, QObject* exclusiveGrabber);
QTLIBC_API void QPointerEvent_ClearPassiveGrabbers(QPointerEvent* self, QEventPoint* point);
QTLIBC_API bool QPointerEvent_AddPassiveGrabber(QPointerEvent* self, QEventPoint* point, QObject* grabber);
QTLIBC_API bool QPointerEvent_RemovePassiveGrabber(QPointerEvent* self, QEventPoint* point, QObject* grabber);
QTLIBC_API int QSinglePointEvent_Button(const QSinglePointEvent* self);
QTLIBC_API int QSinglePointEvent_Buttons(const QSinglePointEvent* self);
QTLIBC_API QPointF* QSinglePointEvent_Position(const QSinglePointEvent* self);
QTLIBC_API QPointF* QSinglePointEvent_ScenePosition(const QSinglePointEvent* self);
QTLIBC_API QPointF* QSinglePointEvent_GlobalPosition(const QSinglePointEvent* self);
QTLIBC_API bool QSinglePointEvent_IsBeginEvent(const QSinglePointEvent* self);
QTLIBC_API bool QSinglePointEvent_IsUpdateEvent(const QSinglePointEvent* self);
QTLIBC_API bool QSinglePointEvent_IsEndEvent(const QSinglePointEvent* self);
QTLIBC_API QObject* QSinglePointEvent_ExclusivePointGrabber(const QSinglePointEvent* self);
QTLIBC_API void QSinglePointEvent_SetExclusivePointGrabber(QSinglePointEvent* self, QObject* exclusiveGrabber);
QTLIBC_API QNativeGestureEvent* QNativeGestureEvent_new(int typeVal, QPointingDevice* dev, QPointF* localPos, QPointF* scenePos, QPointF* globalPos, double value, unsigned long long sequenceId, unsigned long long intArgument);
QTLIBC_API QNativeGestureEvent* QNativeGestureEvent_new2(int typeVal, QPointingDevice* dev, int fingerCount, QPointF* localPos, QPointF* scenePos, QPointF* globalPos, double value, QPointF* delta);
QTLIBC_API QNativeGestureEvent* QNativeGestureEvent_new3(int typeVal, QPointingDevice* dev, int fingerCount, QPointF* localPos, QPointF* scenePos, QPointF* globalPos, double value, QPointF* delta, unsigned long long sequenceId);
QTLIBC_API QNativeGestureEvent* QNativeGestureEvent_Clone(const QNativeGestureEvent* self);
QTLIBC_API int QNativeGestureEvent_GestureType(const QNativeGestureEvent* self);
QTLIBC_API int QNativeGestureEvent_FingerCount(const QNativeGestureEvent* self);
QTLIBC_API double QNativeGestureEvent_Value(const QNativeGestureEvent* self);
QTLIBC_API QPointF* QNativeGestureEvent_Delta(const QNativeGestureEvent* self);
QTLIBC_API QPoint* QNativeGestureEvent_Pos(const QNativeGestureEvent* self);
QTLIBC_API QPoint* QNativeGestureEvent_GlobalPos(const QNativeGestureEvent* self);
QTLIBC_API QPointF* QNativeGestureEvent_LocalPos(const QNativeGestureEvent* self);
QTLIBC_API QPointF* QNativeGestureEvent_WindowPos(const QNativeGestureEvent* self);
QTLIBC_API QPointF* QNativeGestureEvent_ScreenPos(const QNativeGestureEvent* self);
QTLIBC_API void QNativeGestureEvent_Delete(QNativeGestureEvent* self);
QTLIBC_API QKeyEvent* QKeyEvent_new(int typeVal, int key, int modifiers);
QTLIBC_API QKeyEvent* QKeyEvent_Clone(const QKeyEvent* self);
QTLIBC_API int QKeyEvent_Key(const QKeyEvent* self);
QTLIBC_API bool QKeyEvent_Matches(const QKeyEvent* self, int key);
QTLIBC_API int QKeyEvent_Modifiers(const QKeyEvent* self);
QTLIBC_API QKeyCombination* QKeyEvent_KeyCombination(const QKeyEvent* self);
QTLIBC_API libqt_string QKeyEvent_Text(const QKeyEvent* self);
QTLIBC_API bool QKeyEvent_IsAutoRepeat(const QKeyEvent* self);
QTLIBC_API int QKeyEvent_Count(const QKeyEvent* self);
QTLIBC_API unsigned int QKeyEvent_NativeScanCode(const QKeyEvent* self);
QTLIBC_API unsigned int QKeyEvent_NativeVirtualKey(const QKeyEvent* self);
QTLIBC_API unsigned int QKeyEvent_NativeModifiers(const QKeyEvent* self);
QTLIBC_API void QKeyEvent_Delete(QKeyEvent* self);