src/qt/libqevent.bf

	
	public double Value()
	{
		return CQt.QNativeGestureEvent_Value(this.nativePtr);
	}
	
	public void Delta()
	{
		CQt.QNativeGestureEvent_Delta(this.nativePtr);
	}
	
	public void Pos()
	{
		CQt.QNativeGestureEvent_Pos(this.nativePtr);
	}
	
	public void GlobalPos()
	{
		CQt.QNativeGestureEvent_GlobalPos(this.nativePtr);
	}
	
	public void LocalPos()
	{
		CQt.QNativeGestureEvent_LocalPos(this.nativePtr);
	}
	
	public void WindowPos()
	{
		CQt.QNativeGestureEvent_WindowPos(this.nativePtr);
	}
	
	public void ScreenPos()
	{
		CQt.QNativeGestureEvent_ScreenPos(this.nativePtr);
	}
	
	public int64 Button()
	{
		return CQt.QSinglePointEvent_Button(this.nativePtr);
	}
	
	public int64 Buttons()
	{
		return CQt.QSinglePointEvent_Buttons(this.nativePtr);
	}
	
	public void Position()
	{
		CQt.QSinglePointEvent_Position(this.nativePtr);
	}
	
	public void ScenePosition()
	{
		CQt.QSinglePointEvent_ScenePosition(this.nativePtr);
	}
	
	public void GlobalPosition()
	{
		CQt.QSinglePointEvent_GlobalPosition(this.nativePtr);
	}
	
	public virtual bool IsBeginEvent()
	{
		return CQt.QSinglePointEvent_IsBeginEvent(this.nativePtr);
	}
	
	public virtual bool IsUpdateEvent()
	{
		return CQt.QSinglePointEvent_IsUpdateEvent(this.nativePtr);
	}
	
	public virtual bool IsEndEvent()
	{
		return CQt.QSinglePointEvent_IsEndEvent(this.nativePtr);
	}
	
	public void* ExclusivePointGrabber()
	{
		return CQt.QSinglePointEvent_ExclusivePointGrabber(this.nativePtr);
	}
	
	public void SetExclusivePointGrabber(IQObject exclusiveGrabber)
	{
		CQt.QSinglePointEvent_SetExclusivePointGrabber(this.nativePtr, (exclusiveGrabber == null) ? null : (void*)exclusiveGrabber.NativePtr);
	}
	
	public void* PointingDevice()
	{
		return CQt.QPointerEvent_PointingDevice(this.nativePtr);
	}
	
	public int64 PointerType()
	{
		return CQt.QPointerEvent_PointerType(this.nativePtr);
	}
	
	public virtual void SetTimestamp(uint64 timestamp)
	{
		CQt.QPointerEvent_SetTimestamp(this.nativePtr, timestamp);
	}
	
	public int32 PointCount()
	{
		return CQt.QPointerEvent_PointCount(this.nativePtr);
	}
	
	public void* Point(int32 i)
	{
		return CQt.QPointerEvent_Point(this.nativePtr, i);
	}
	
	public void[] Points()
	{
		return CQt.QPointerEvent_Points(this.nativePtr);
	}
	
	public void* PointById(int32 id)
	{
		return CQt.QPointerEvent_PointById(this.nativePtr, id);
	}
	
	public bool AllPointsGrabbed()
	{
		return CQt.QPointerEvent_AllPointsGrabbed(this.nativePtr);
	}
	
	public bool AllPointsAccepted()
	{
		return CQt.QPointerEvent_AllPointsAccepted(this.nativePtr);
	}
	
	public virtual void SetAccepted(bool accepted)
	{
		CQt.QPointerEvent_SetAccepted(this.nativePtr, accepted);
	}
	
	public void* ExclusiveGrabber(IQEventPoint point)
	{
		return CQt.QPointerEvent_ExclusiveGrabber(this.nativePtr, (point == default) ? default : (void*)point.NativePtr);
	}
	
	public void SetExclusiveGrabber(IQEventPoint point, IQObject exclusiveGrabber)
	{
		CQt.QPointerEvent_SetExclusiveGrabber(this.nativePtr, (point == default) ? default : (void*)point.NativePtr, (exclusiveGrabber == null) ? null : (void*)exclusiveGrabber.NativePtr);
	}
	
	public void ClearPassiveGrabbers(IQEventPoint point)
	{
		CQt.QPointerEvent_ClearPassiveGrabbers(this.nativePtr, (point == default) ? default : (void*)point.NativePtr);
	}
	
	public bool AddPassiveGrabber(IQEventPoint point, IQObject grabber)
	{
		return CQt.QPointerEvent_AddPassiveGrabber(this.nativePtr, (point == default) ? default : (void*)point.NativePtr, (grabber == null) ? null : (void*)grabber.NativePtr);
	}
	
	public bool RemovePassiveGrabber(IQEventPoint point, IQObject grabber)
	{
		return CQt.QPointerEvent_RemovePassiveGrabber(this.nativePtr, (point == default) ? default : (void*)point.NativePtr, (grabber == null) ? null : (void*)grabber.NativePtr);
	}
	
	public void* Device()
	{
		return CQt.QInputEvent_Device(this.nativePtr);
	}
	
	public int64 DeviceType()
	{
		return CQt.QInputEvent_DeviceType(this.nativePtr);
	}
	
	public int64 Modifiers()
	{
		return CQt.QInputEvent_Modifiers(this.nativePtr);
	}
	
	public void SetModifiers(int64 modifiers)
	{
		CQt.QInputEvent_SetModifiers(this.nativePtr, modifiers);
	}
	
	public uint64 Timestamp()
	{
		return CQt.QInputEvent_Timestamp(this.nativePtr);
	}
	
	public int64 Type()
	{
		return CQt.QEvent_Type(this.nativePtr);
	}
	
	public bool Spontaneous()
	{
		return CQt.QEvent_Spontaneous(this.nativePtr);
	}
	
	public bool IsAccepted()
	{
		return CQt.QEvent_IsAccepted(this.nativePtr);
	}
	
	public void Accept()
	{
		CQt.QEvent_Accept(this.nativePtr);
	}
	
	public void Ignore()
	{
		CQt.QEvent_Ignore(this.nativePtr);
	}
	
	public bool IsInputEvent()
	{
		return CQt.QEvent_IsInputEvent(this.nativePtr);
	}
	
	public bool IsPointerEvent()
	{
		return CQt.QEvent_IsPointerEvent(this.nativePtr);
	}
	
	public bool IsSinglePointEvent()
	{
		return CQt.QEvent_IsSinglePointEvent(this.nativePtr);
	}
	
	public static int32 RegisterEventType()
	{
		return CQt.QEvent_RegisterEventType();
	}
	
	public static int32 RegisterEventType1(int32 hint)
	{
		return CQt.QEvent_RegisterEventType1(hint);
	}
	
}
extension CQt
{
	[LinkName("QNativeGestureEvent_new")]
	public static extern void* QNativeGestureEvent_new(int64 typeVal, void* dev, void* localPos, void* scenePos, void* globalPos, double value, uint64 sequenceId, uint64 intArgument);
	[LinkName("QNativeGestureEvent_new2")]
	public static extern void* QNativeGestureEvent_new2(int64 typeVal, void* dev, int32 fingerCount, void* localPos, void* scenePos, void* globalPos, double value, void* delta);
	[LinkName("QNativeGestureEvent_new3")]
	public static extern void* QNativeGestureEvent_new3(int64 typeVal, void* dev, int32 fingerCount, void* localPos, void* scenePos, void* globalPos, double value, void* delta, uint64 sequenceId);
	[LinkName("QNativeGestureEvent_Clone")]
	public static extern void* QNativeGestureEvent_Clone(void* c_this);
	[LinkName("QNativeGestureEvent_GestureType")]
	public static extern int64 QNativeGestureEvent_GestureType(void* c_this);
	[LinkName("QNativeGestureEvent_FingerCount")]
	public static extern int32 QNativeGestureEvent_FingerCount(void* c_this);
	[LinkName("QNativeGestureEvent_Value")]
	public static extern double QNativeGestureEvent_Value(void* c_this);
	[LinkName("QNativeGestureEvent_Delta")]
	public static extern void QNativeGestureEvent_Delta(void* c_this);
	[LinkName("QNativeGestureEvent_Pos")]
	public static extern void QNativeGestureEvent_Pos(void* c_this);
	[LinkName("QNativeGestureEvent_GlobalPos")]
	public static extern void QNativeGestureEvent_GlobalPos(void* c_this);
	[LinkName("QNativeGestureEvent_LocalPos")]
	public static extern void QNativeGestureEvent_LocalPos(void* c_this);
	[LinkName("QNativeGestureEvent_WindowPos")]
	public static extern void QNativeGestureEvent_WindowPos(void* c_this);
	[LinkName("QNativeGestureEvent_ScreenPos")]
	public static extern void QNativeGestureEvent_ScreenPos(void* c_this);
	/// Delete this object from C++ memory
	[LinkName("QNativeGestureEvent_Delete")]
	public static extern void QNativeGestureEvent_Delete(void* self);
}
public interface IQKeyEvent
{
	void* NativePtr { get; }
}
public class QKeyEvent : IQKeyEvent, IQInputEvent
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this(int64 typeVal, int32 key, int64 modifiers)
	{
		this.nativePtr = CQt.QKeyEvent_new(typeVal, key, modifiers);
	}
	
	public ~this()
	{
		CQt.QKeyEvent_Delete(this.nativePtr);
	}
	
	public virtual void* Clone()
	{
		return CQt.QKeyEvent_Clone(this.nativePtr);
	}
	
	public int32 Key()
	{
		return CQt.QKeyEvent_Key(this.nativePtr);
	}
	
	public bool Matches(int64 key)
	{
		return CQt.QKeyEvent_Matches(this.nativePtr, key);
	}
	
	public int64 Modifiers()
	{
		return CQt.QKeyEvent_Modifiers(this.nativePtr);
	}
	
	public void KeyCombination()
	{
		CQt.QKeyEvent_KeyCombination(this.nativePtr);
	}
	
	public libqt_string Text()
	{
		return CQt.QKeyEvent_Text(this.nativePtr);
	}
	
	public bool IsAutoRepeat()
	{
		return CQt.QKeyEvent_IsAutoRepeat(this.nativePtr);
	}
	
	public int32 Count()
	{
		return CQt.QKeyEvent_Count(this.nativePtr);
	}
	
	public uint32 NativeScanCode()
	{
		return CQt.QKeyEvent_NativeScanCode(this.nativePtr);
	}
	
	public uint32 NativeVirtualKey()
	{
		return CQt.QKeyEvent_NativeVirtualKey(this.nativePtr);
	}
	
	public uint32 NativeModifiers()
	{
		return CQt.QKeyEvent_NativeModifiers(this.nativePtr);
	}
	
	public void* Device()
	{
		return CQt.QInputEvent_Device(this.nativePtr);
	}
	
	public int64 DeviceType()
	{
		return CQt.QInputEvent_DeviceType(this.nativePtr);
	}
	
	public void SetModifiers(int64 modifiers)
	{
		CQt.QInputEvent_SetModifiers(this.nativePtr, modifiers);
	}
	
	public uint64 Timestamp()
	{
		return CQt.QInputEvent_Timestamp(this.nativePtr);
	}
	
	public virtual void SetTimestamp(uint64 timestamp)
	{
		CQt.QInputEvent_SetTimestamp(this.nativePtr, timestamp);
	}
	
	public int64 Type()
	{
		return CQt.QEvent_Type(this.nativePtr);
	}
	
	public bool Spontaneous()
	{
		return CQt.QEvent_Spontaneous(this.nativePtr);
	}
	
	public virtual void SetAccepted(bool accepted)
	{
		CQt.QEvent_SetAccepted(this.nativePtr, accepted);
	}
	
	public bool IsAccepted()
	{
		return CQt.QEvent_IsAccepted(this.nativePtr);
	}
	
	public void Accept()
	{
		CQt.QEvent_Accept(this.nativePtr);
	}
	
	public void Ignore()
	{
		CQt.QEvent_Ignore(this.nativePtr);
	}
	
	public bool IsInputEvent()
	{
		return CQt.QEvent_IsInputEvent(this.nativePtr);
	}
	
	public bool IsPointerEvent()
	{
		return CQt.QEvent_IsPointerEvent(this.nativePtr);
	}
	
	public bool IsSinglePointEvent()
	{
		return CQt.QEvent_IsSinglePointEvent(this.nativePtr);
	}
	
	public static int32 RegisterEventType()
	{
		return CQt.QEvent_RegisterEventType();
	}
	
	public static int32 RegisterEventType1(int32 hint)
	{
		return CQt.QEvent_RegisterEventType1(hint);
	}
	
}
